--- a/content/index.njk
+++ b/content/index.njk
@@ -1,28 +1,26 @@
 ---
-layout: layouts/home.njk
-eleventyNavigation:
-  key: Home
-  order: 1
-numberOfLatestPostsToShow: 3
+layout: layouts/full-page.njk
+title: Home
 ---
-{% set postsCount = collections.posts | length %}
-{% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
-<h1>Latest {{ latestPostsCount }} Post{% if latestPostsCount != 1 %}s{% endif %}</h1>
-
-{% set postslist = collections.posts | head(-1 * numberOfLatestPostsToShow) %}
-{% set postslistCounter = postsCount %}
-{% include "postslist.njk" %}
-
-{% set morePosts = postsCount - numberOfLatestPostsToShow %}
-{% if morePosts > 0 %}
-<p>{{ morePosts }} more post{% if morePosts != 1 %}s{% endif %} can be found in <a href="/blog/">the archive</a>.</p>
-{% endif %}
-
-{# List every content page in the project #}
-{#
-<ul>
-	{%- for entry in collections.all %}
-	<li><a href="{{ entry.url }}"><code>{{ entry.url }}</code></a></li>
-	{%- endfor %}
-</ul>
-#}
+<!--begin::Content-->
+<div class="d-flex flex-row-fluid flex-column flex-column-fluid text-center p-10 py-lg-20">
+    <!--begin::Logo-->
+    <a href="/" class="pt-lg-20 mb-12">
+    <img alt="Logo" src="{{ '/assets/media/logos/default.svg' | url }}" class="theme-light-show h-40px h-lg-50px">
+    <img alt="Logo" src="{{ '/assets/media/logos/default-dark.svg' | url }}" class="theme-dark-show h-40px h-lg-50px">
+    </a> 
+    <!--begin::Logo-->
+    <h1 class="fw-bold fs-2qx text-gray-800 mb-7">Welcome to GSM Pro</h1>
+    <!--begin::Message-->
+    <div class="fw-semibold fs-3 text-muted mb-15">
+        Công cụ phân tích và tối ưu hoạt động <br>
+        dành cho tài xế XanhSMBike
+    </div>
+    <!--begin::Action-->
+    <div class="text-center">
+        <a href="/dashboard" class="btn btn-lg btn-primary fw-bold">Go to homepage</a>          
+    </div>
+</div>
+<!--begin::Illustration-->
+<div class="d-flex flex-row-auto bgi-no-repeat bgi-position-x-center bgi-size-contain bgi-position-y-bottom min-h-150px min-h-lg-350px" style="background-image: url(/assets/media/illustrations/sketchy-1/7.png)"> 
+</div>
