--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -4,8 +4,8 @@
                             <i class="ki-duotone ki-abstract-14 fs-2"><span class="path1"></span><span class="path2"></span></i>	
                         </div>
                         <a href="/" class="app-sidebar-logo">
-                        <img alt="Logo" src="{{ '/assets/media/logos/logo-default.svg' | url }}" class="h-30px theme-light-show"/>
-                        <img alt="Logo" src="{{ '/assets/media/logos/logo-default.svg' | url }}" class="h-30px theme-dark-show"/>
+                        <img alt="Logo" src="{{ '/assets/media/logos/logo-default.svg' }}" class="h-30px theme-light-show"/>
+                        <img alt="Logo" src="{{ '/assets/media/logos/logo-default.svg' }}" class="h-30px theme-dark-show"/>
                         </a>
                         <div 
                             id="kt_app_sidebar_toggle" 
@@ -56,7 +56,7 @@
                                                 </h3>
                                                 <a href="#" class="d-flex text-gray-900 text-hover-primary align-items-center mb-5">
                                                     <div class="symbol symbol-40px me-4">
-                                                        <img src="{{ '/assets/media/avatars/300-6.jpg' | url }}" alt=""/>
+                                                        <img src="{{ '/assets/media/avatars/300-6.jpg' }}" alt=""/>
                                                     </div>
                                                     <div class="d-flex flex-column justify-content-start fw-semibold">
                                                         <span class="fs-6 fw-semibold">Karina Clark</span>
