--- a/_includes/sidebar.njk
+++ b/_includes/sidebar.njk
@@ -20,12 +20,12 @@
             </span>
             <div class="menu-sub menu-sub-accordion">
                 <div  class="menu-item">
-                    <a class="menu-link {% if page.url == '/dashboard/' %}active{% endif %}" href="{{ '/dashboard/' | url }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Tổng Quan</span></a>
+                    <a class="menu-link {% if page.url == '/dashboard/' %}active{% endif %}" href="{{ '/dashboard/' }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Tổng Quan</span></a>
                 </div>
             </div>
             <div class="menu-sub menu-sub-accordion">
                 <div  class="menu-item">
-                    <a class="menu-link {% if page.url == '/trips/' %}active{% endif %}" href="{{ '/trips/' | url }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Chuyến Xe</span></a>
+                    <a class="menu-link {% if page.url == '/trips/' %}active{% endif %}" href="{{ '/trips/' }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Chuyến Xe</span></a>
                 </div>
             </div>
         </div>
@@ -44,12 +44,12 @@
             </span>
             <div class="menu-sub menu-sub-accordion">
                 <div  class="menu-item">
-                    <a class="menu-link {% if page.url == '/accounts/overvew/' %}active{% endif %}" href="{{ '/accounts/' | url }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Tổng Quan</span></a>
+                    <a class="menu-link {% if page.url == '/accounts/overvew/' %}active{% endif %}" href="{{ '/accounts/' }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Tổng Quan</span></a>
                 </div>
             </div>
             <div class="menu-sub menu-sub-accordion">
                 <div  class="menu-item">
-                    <a class="menu-link {% if page.url == '/accounts/settings/' %}active{% endif %}" href="{{ '/accounts/settings/' | url }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Thêm Chuyến Xe</span></a>
+                    <a class="menu-link {% if page.url == '/accounts/settings/' %}active{% endif %}" href="{{ '/accounts/settings/' }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Thêm Chuyến Xe</span></a>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
             </span>
             <div class="menu-sub menu-sub-accordion">
                 <div  class="menu-item">
-                    <a class="menu-link {% if page.url == '/accounts/settings/' %}active{% endif %}" href="{{ '/accounts/settings/' | url }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Cài Đặt</span></a>
+                    <a class="menu-link {% if page.url == '/accounts/settings/' %}active{% endif %}" href="{{ '/accounts/settings/' }}"><span  class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Cài Đặt</span></a>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
         >
         <h2 class="fw-bold text-gray-800">GSM Pro</h2>
         <div class="fw-semibold text-gray-700 fs-7 lh-2 px-7 mb-1">#1 Phân tích và tối ưu hoạt động</div>
-        <img class="mx-auto h-150px h-lg-175px mb-4" src="{{ '/assets/media/misc/saul-welcome.png' | url }}" alt=""/>            
+        <img class="mx-auto h-150px h-lg-175px mb-4" src="{{ '/assets/media/misc/saul-welcome.png' }}" alt=""/>            
         <div class="text-center mb-lg-5 pb-lg-3">
             <a href="#" class="btn btn-sm btn-dark"  data-bs-toggle="modal" data-bs-target="#kt_modal_create_account">Bắt Đầu</a>
         </div>
