--- a/content/index.njk
+++ b/content/index.njk
@@ -6,8 +6,8 @@ title: Home
 <div class="d-flex flex-row-fluid flex-column flex-column-fluid text-center p-10 py-lg-20">
     <!--begin::Logo-->
     <a href="/" class="pt-lg-20 mb-12">
-    <img alt="Logo" src="{{ '/assets/media/logos/default.svg' | url }}" class="theme-light-show h-40px h-lg-50px">
-    <img alt="Logo" src="{{ '/assets/media/logos/default-dark.svg' | url }}" class="theme-dark-show h-40px h-lg-50px">
+    <img alt="Logo" src="{{ '/assets/media/logos/default.svg' }}" class="theme-light-show h-40px h-lg-50px">
+    <img alt="Logo" src="{{ '/assets/media/logos/default-dark.svg' }}" class="theme-dark-show h-40px h-lg-50px">
     </a> 
     <!--begin::Logo-->
     <h1 class="fw-bold fs-2qx text-gray-800 mb-7">Welcome to GSM Pro</h1>
